@@ -347,6 +347,9 @@ Release 2.1.0-beta - UNRELEASED
     MAPREDUCE-5220. Fix backward incompatibility for TaskCompletionEvent by
     adding back setTaskID. (Zhijie Shen via acmurthy) 
 
+    MAPREDUCE-5296. Fix backward incompatibility for JobControl by adding the
+    omitted addJob. (Zhijie Shen via acmurthy) 
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS
 
     MAPREDUCE-4739. Some MapReduce tests fail to find winutils.
